# yandex-music-downloader

./: pyproject.toml
ymd/: api.py  core.py
