[build-system]
requires = [
    "setuptools",
    "setuptools-git"
]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-music-downloader"
version = "3.5.4-r1"
description = "Загрузчик музыки с сервиса Яндекс.Музыка"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "yandex-music-api @ git+https://github.com/MarshalX/yandex-music-api",
    "mutagen>=1.47.0",
    "pycryptodome"
]

[project.scripts]
yandex-music-downloader = "ymd.cli:main"
